# AIST-hand

./: .gitignore  DECISIONS.md  ESTADO-2026-06-15.md  ESTADO-2026-06-15b.md  ESTADO-2026-06-15c.md  ESTADO-2026-06-16.md  ESTADO-2026-06-16b.md  ESTADO-2026-06-21.md  ESTADO-2026-06-22.md  GRASP_MODEL_COMPARISON.md  HANDOFF_STAGE1.md  LEAP_UDHM_DIAGNOSTIC.md  MUJOCO_LOG.TXT  PLAN_robot_qpos_udhm.md  README.md  SIGUIENTE.md  TO-DO-FOR-TOMORROW.md  TODO.md  chatgpthandoff.md  mujoco  root.tex  siguientes_pasos.md  wilor_colab_server.ipynb
grasp-model/: README.md  pyproject.toml  requirements.txt  train.py
grasp-model/notebooks/: precompute_dong_colab.ipynb  reannotate_hamer_benchmark.ipynb  train_colab.ipynb  train_colab_abl05_xyz_ahg_cmc.ipynb  train_colab_abl07_xyz_ahg_swing.ipynb  train_colab_abl12_dong_xyz_norm_ahg.ipynb  train_colab_abl13_dong_xyz_norm_ahg_euler.ipynb  train_colab_retarget.ipynb  train_stage1_colab.ipynb  train_stage1_colab_run18b.ipynb
grasp-model/scripts/: analyze_dexonomy_eigengrasps.py  app.py  build_abl11_csv.py  build_abl13_csv.py  build_cache_abl03.py  build_cache_abl11.py  build_cache_abl13.py  build_cache_ablation.py  build_cache_ablation_xyz.py  build_cache_run012.py  build_cache_run014.py  build_retarget_csv.py  compute_sk_weights.py  compute_sk_weights_euler.py  cross_embodiment_sampler.py  diagnose_latent_alignment.py  diagnose_sk_triplets.py  dong_stage2.py  embedding_tsne_power_disk.py  generate_synthetic_close_hand_qpos.py  generate_synthetic_open_hand_qpos.py  generate_valid_robot_poses.py  human_dong_loader.py  human_loader.py  (+21 more)
(+437 files in other folders)
